--- a/project-list/project-list.css
+++ b/project-list/project-list.css
@@ -31,6 +31,7 @@
 	display: block;
 	margin: 10px;
 	max-height: 150px;
+	max-width: 100%;
 	align-self: center;
 	flex-shrink: 0;
 }
@@ -49,5 +50,17 @@
 	.project-card {
 		background: rgb(255, 255, 255);
 		box-shadow: 0px 3px 9px -4px rgba(0, 0, 0, 0.25);
+	}
+}
+
+@media (max-width: 649px) {
+	.project-card {
+		flex-flow: column;
+		padding: 0px;
+	}
+
+	.project-card img {
+		max-height: 100%;
+		margin: 0px;
 	}
 }
